DBTOOLS-2090 sonar fixes